[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/textures/Window/module-security/windowbuttoncaptchafail.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/Window/module-security/windowbuttoncaptchasuccess.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/Window/module-security/windowcaptcha.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/48/GOTHICB-48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/24/GOTHIC-24.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/rich-text-effects/Ghost.tres" type="RichTextEffect" id=6]
[ext_resource path="res://assets/rich-text-effects/Matrix.tres" type="RichTextEffect" id=7]
[ext_resource path="res://assets/rich-text-effects/Pulse.tres" type="RichTextEffect" id=8]
[ext_resource path="res://assets/fonts/48/GOTHIC-48.tres" type="DynamicFont" id=9]
[ext_resource path="res://src/scripts/modules/ModuleSecurity.gd" type="Script" id=10]
[ext_resource path="res://assets/fonts/48/GOTHICI-48.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/fonts/48/GOTHICBI-48.tres" type="DynamicFont" id=12]













[sub_resource type="InputEventKey" id=1]
pressed = true
scancode = 16777221

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="CaptchaGame" type="Node2D"]
script = ExtResource( 10 )
KeywordList = "ally
blood
half
honest
island
frighten
iron
scheme
vision
wounded"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Window" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -546.0
margin_top = -408.0
margin_right = 546.0
margin_bottom = 408.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 546, 408 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CaptchaText" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -181.0
margin_right = 220.0
margin_bottom = 119.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 220, 150 )
custom_fonts/bold_italics_font = ExtResource( 12 )
custom_fonts/italics_font = ExtResource( 11 )
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 9 )
custom_constants/line_separation = 12
bbcode_enabled = true
bbcode_text = "[center][tornado radius=5 freq=2]

wounded[/tornado][/center]
[tornado radius=5 freq=2][/tornado]"
text = "

wounded
"
scroll_active = false
custom_effects = [ ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInput" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -132.0
margin_top = 52.0
margin_right = 133.0
margin_bottom = 102.0
rect_pivot_offset = Vector2( 133, 25 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAuthenticate" type="TextureButton" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -181.5
margin_top = -245.0
margin_right = 181.5
margin_bottom = -174.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 181, 35 )
shortcut = SubResource( 2 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/ButtonAuthenticate" to="." method="_on_ButtonAuthenticate_pressed"]
